--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@tippyjs/react": "^4.2.6",
     "gh-pages": "^6.3.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tippy.js": "^6.3.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
